# TypeWinner

./: .eslintrc.js  .gitignore  MIGRATION.md  README.md  REFACTORING.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
assets/: icon.icns
release/app/: package-lock.json  package.json
src/: App.css  App.tsx  tailwind.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: puppeteer-node.cjs
src-tauri/src/: commands.rs  main.rs
src-tauri/src/utils/: chrome.rs  config.rs  grok.rs  mod.rs
src/backend/: global.d.ts  main.ts  preload.mjs  preload.ts  types.ts
src/backend/utils/: commons.ts  grok.ts  puppeteer.ts  typing.ts
src/frontend/: index.html  styles.css  tailwind.css
src/frontend/js/: error-slider.js  main.js  speed-slider.js
src/main/: global.d.ts  main.ts  preload.ts  types.ts
src/main/utils/: commons.ts  grok.ts  puppeteer.ts  typing.ts
src/renderer/: App.css  App.tsx  index.ejs  index.tsx  preload.d.ts  tailwind.css
